@startuml

title __DYNAMIC's Class Diagram__\n

  namespace decorator.dynamic {
    class decorator.dynamic.ColoredShape {
        - color : String
        + ColoredShape()
        + info()
    }
  }
  

  namespace decorator.dynamic {
    class decorator.dynamic.DynamicDecoratorDemo {
        {static} + main()
    }
  }
  

  namespace decorator.dynamic {
    class decorator.dynamic.TransparentShape {
        - transparency : int
        + TransparentShape()
        + info()
    }
  }
  

  decorator.dynamic.ColoredShape .up.|> decorator.dynamic.base.Shape
  decorator.dynamic.ColoredShape o-- decorator.dynamic.base.Shape : shape
  decorator.dynamic.TransparentShape .up.|> decorator.dynamic.base.Shape
  decorator.dynamic.TransparentShape o-- decorator.dynamic.base.Shape : shape


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
